Retesting sbml parsing

--- a/iPythonNotebooks/Using_an_SBML_model.ipynb
+++ b/iPythonNotebooks/Using_an_SBML_model.ipynb
@@ -36,7 +36,7 @@
      "output_type": "stream",
      "text": [
       "We are logging to /home/redwards/GitHubs/PyFBA/iPythonNotebooks/PyFBA.log\n",
-      "Welcome to PyFBA version 1.1 started at 2021-05-23 13:17:10.490222\n"
+      "Welcome to PyFBA version 1.1 started at 2021-05-24 08:16:34.028901\n"
      ]
     },
     {
@@ -98,19 +98,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Reaction' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-f9e53f08ac66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mbiomass_equation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreactions\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;34m'biomass_equation'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreactions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0mbiomass_equation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreactions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Reaction' object has no attribute 'name'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get a dict of reactions.\n",
     "# The key is the reaction ID, and the value is a metabolism.reaction.Reaction object\n",
@@ -119,7 +107,7 @@
     "uptake_secretion_reactions = {}\n",
     "biomass_equation = None\n",
     "for r in reactions:\n",
-    "    if 'biomass_equation' in reactions[r].name.lower():\n",
+    "    if 'biomass_equation' in r:\n",
     "        biomass_equation = reactions[r]\n",
     "        continue\n",
     "    is_boundary = False\n",
@@ -152,8 +140,8 @@
      "output_type": "stream",
      "text": [
       "There are 1574 reactions in the model\n",
-      "There are 174 uptake/secretion reactions in the model\n",
-      "There are 1399 reactions to be run in the model\n"
+      "There are 0 uptake/secretion reactions in the model\n",
+      "There are 1573 reactions to be run in the model\n"
      ]
     }
    ],
@@ -187,8 +175,8 @@
     "# Filter for compounds that are boundary compounds\n",
     "filtered_compounds = {}\n",
     "for c in all_compounds:\n",
-    "    if not all_compounds[c].uptake_secretion:\n",
-    "        filtered_compounds[c] = all_compounds[c]"
+    "    if not c.uptake_secretion:\n",
+    "        filtered_compounds[c] = c"
    ]
   },
   {
@@ -234,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The stoichiometric matrix will be 1399 reactions by 1301 compounds\n"
+      "The stoichiometric matrix will be 1573 reactions by 1301 compounds\n"
      ]
     }
    ],
@@ -259,12 +247,91 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found media component cpd00091: UMP (location: c)\n",
+      "Found media component cpd00182: Adenosine (location: e)\n",
+      "Found media component cpd00048: Sulfate (location: e)\n",
+      "Found media component cpd00046: CMP (location: c)\n",
+      "Found media component cpd00311: Guanosine (location: c)\n",
+      "Found media component cpd00644: PAN (location: e)\n",
+      "Found media component cpd00007: O2 (location: e)\n",
+      "Found media component cpd00028: Heme (location: c)\n",
+      "Found media component cpd00220: Riboflavin (location: e)\n",
+      "Found media component cpd00239: H2S (location: c)\n",
+      "Found media component cpd00246: Inosine (location: e)\n",
+      "Found media component cpd00254: Mg (location: c)\n",
+      "Found media component cpd00126: GMP (location: c)\n",
+      "Found media component cpd00001: H2O (location: e)\n",
+      "Found media component cpd00018: AMP (location: c)\n",
+      "Found media component cpd00654: Deoxycytidine (location: e)\n",
+      "Found media component cpd00184: Thymidine (location: e)\n",
+      "Found media component cpd00393: Folate (location: c)\n",
+      "Found media component cpd00541: Lipoate (location: c)\n",
+      "Found media component cpd01048: Arsenate (location: c)\n",
+      "Found media component cpd00215: Pyridoxal (location: c)\n",
+      "Found media component cpd00092: Uracil (location: e)\n",
+      "Found media component cpd00226: HYXN (location: e)\n",
+      "Found media component cpd00438: Deoxyadenosine (location: e)\n",
+      "Found media component cpd00009: Phosphate (location: e)\n",
+      "Found media component cpd00013: NH3 (location: e)\n",
+      "Found media component cpd00033: Glycine (location: e)\n",
+      "Found media component cpd00218: Niacin (location: c)\n",
+      "Found media component cpd00249: Uridine (location: e)\n",
+      "Found media component cpd10516: fe3 (location: e)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This may not be correct. Please check correct_media_names in parse_sbml.py\n",
+      "Can't find a compound for media component L-Proline\n",
+      "Can't find a compound for media component Cl-\n",
+      "Can't find a compound for media component L-Methionine\n",
+      "Can't find a compound for media component L-Arginine\n",
+      "Can't find a compound for media component L-Valine\n",
+      "Can't find a compound for media component L-Phenylalanine\n",
+      "Can't find a compound for media component L-Tryptophan\n",
+      "Can't find a compound for media component Hg2+\n",
+      "Can't find a compound for media component Ca2+\n",
+      "Can't find a compound for media component L-Isoleucine\n",
+      "Can't find a compound for media component Co2+\n",
+      "Can't find a compound for media component Fe2+\n",
+      "Can't find a compound for media component L-Cystine\n",
+      "Can't find a compound for media component Cd2+\n",
+      "Can't find a compound for media component Thiamine phosphate\n",
+      "Can't find a compound for media component Na+\n",
+      "Can't find a compound for media component H+\n",
+      "Can't find a compound for media component L-Tyrosine\n",
+      "Can't find a compound for media component L-Leucine\n",
+      "Can't find a compound for media component Zn2+\n",
+      "Can't find a compound for media component Vitamin B12\n",
+      "Can't find a compound for media component L-Aspartate\n",
+      "Can't find a compound for media component chromate\n",
+      "Can't find a compound for media component L-Glutamate\n",
+      "Can't find a compound for media component Ni2+\n",
+      "Can't find a compound for media component Cu2+\n",
+      "Can't find a compound for media component D-Glucose\n",
+      "Can't find a compound for media component L-Alanine\n",
+      "Can't find a compound for media component L-Serine\n",
+      "Can't find a compound for media component Mn2+\n",
+      "Can't find a compound for media component L-Histidine\n",
+      "Can't find a compound for media component K+\n",
+      "Can't find a compound for media component Molybdate\n",
+      "Can't find a compound for media component L-Threonine\n",
+      "Can't find a compound for media component L-Lysine\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the media file\n",
-    "media = PyFBA.parse.read_media_file(\"ArgonneLB.txt\")\n",
+    "media = PyFBA.parse.read_media_file(\"../media/ArgonneLB.txt\")\n",
     "# Correct the names\n",
-    "media = PyFBA.parse.correct_media_names(media, all_compounds)"
+    "media = PyFBA.parse.correct_media_names(media, sbml, all_compounds)"
    ]
   },
   {
@@ -311,10 +378,17 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The FBA completed with a flux value of 281.841757437 --> growth: True\n"
+     "ename": "KeyError",
+     "evalue": "'cpd15269: octadecenoate (location: c)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-fe219d954913>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m status, value, growth = PyFBA.fba.run_fba(filtered_compounds, reactions,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                           \u001b[0mreactions_to_run\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmedia\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbiomass_equation\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                           uptake_secretion_reactions)\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The FBA completed with a flux value of {} --> growth: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrowth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/GitHubs/PyFBA/PyFBA/fba/run_fba.py\u001b[0m in \u001b[0;36mrun_fba\u001b[0;34m(compounds, reactions, reactions_to_run, media, biomass_equation, uptake_secretion, verbose)\u001b[0m\n\u001b[1;32m     31\u001b[0m     \"\"\"\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m     cp, rc, reactions = PyFBA.fba.create_stoichiometric_matrix(reactions_to_run, reactions, compounds, media,\n\u001b[0m\u001b[1;32m     34\u001b[0m                                                                biomass_equation, uptake_secretion, verbose=False)\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/GitHubs/PyFBA/PyFBA/fba/create_stoichiometric_matrix.py\u001b[0m in \u001b[0;36mcreate_stoichiometric_matrix\u001b[0;34m(reactions_to_run, reactions, compounds, media, biomass_equation, uptake_secretion, verbose)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0muptake_secretion\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m         \u001b[0muptake_secretion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPyFBA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfba\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muptake_and_secretion_reactions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallcpds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompounds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0muptake_secretion\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0mreactions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muptake_secretion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muptake_secretion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/GitHubs/PyFBA/PyFBA/fba/external_reactions.py\u001b[0m in \u001b[0;36muptake_and_secretion_reactions\u001b[0;34m(model_compounds, compounds)\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodel_compounds\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mcompounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlocation\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'e'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mcompounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Biomass'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m             \u001b[0;31m# this is an uptake or secretion reaction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0;31m# we need to add a new compound like this with a false location\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'cpd15269: octadecenoate (location: c)'"
      ]
     }
    ],
