Updating without IDs

--- a/iPythonNotebooks/PATRIC to FBA.ipynb
+++ b/iPythonNotebooks/PATRIC to FBA.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe5be1a7",
    "metadata": {},
    "source": [
     "# How to create and run a gap-filled FBA from PATRIC\n",
@@ -17,9 +16,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a3d382b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are logging to /home/redwards/GitHubs/PyFBA/iPythonNotebooks/PyFBA.log\n",
+      "Welcome to PyFBA version 1.1 started at 2021-05-26 16:19:32.220562\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "We are using /home/redwards/GitHubs/PyFBA/PyFBA/Biochemistry/ModelSEEDDatabase/ for our data\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -29,7 +43,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f825f4",
    "metadata": {},
    "source": [
     "# Find a genome and download the annotations\n",
@@ -64,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ba2b569e",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +99,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e62e58",
    "metadata": {},
    "source": [
     "Next, we convert those roles to reactions. We start with a dict of roles and reactions, but we only need a list of unique reactions, so we convert the keys to a set."
@@ -96,7 +107,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b5a60dd1",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "61bbea6e",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2adb0796",
    "metadata": {},
    "source": [
     "### Read all the reactions and compounds in our database\n",
@@ -151,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "669e6817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +168,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecd40ea6",
    "metadata": {},
    "source": [
     "#### Update reactions to run, making sure that all reactions are in the list!\n",
@@ -172,7 +178,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "b95bf162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +192,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66407999",
    "metadata": {},
    "source": [
     "### Test whether these reactions grow on ArgonneLB media\n",
@@ -200,7 +204,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02b4da70",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +221,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc9c2b8",
    "metadata": {},
    "source": [
     "### Define a biomass equation\n",
@@ -229,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "957a2e00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +239,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acc923fa",
    "metadata": {},
    "source": [
     "### Run the FBA\n",
@@ -249,7 +249,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6ec76117",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +267,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edc09614",
    "metadata": {},
    "source": [
     "##Gap-fill the model\n",
@@ -283,7 +281,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ea4ed2f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +291,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5bc0af2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +299,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cfd7e03",
    "metadata": {},
    "source": [
     "### Media import reactions\n",
@@ -314,7 +309,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0ce9c688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "6bb5b361",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +339,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c724871",
    "metadata": {},
    "source": [
     "### Essential reactions\n",
@@ -357,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8dd9d98a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +360,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9964080b",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +378,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b114483",
    "metadata": {},
    "source": [
     "### Subsystems\n",
@@ -399,7 +388,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "39bae1d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +402,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "835d10fe",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +421,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2531029c",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +440,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8ed316b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +449,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df615d9",
    "metadata": {},
    "source": [
     "###Orphan compounds\n",
@@ -477,7 +461,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f678351f",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +483,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ac4ab614",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +501,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "942f5a3a",
    "metadata": {},
    "source": [
     "## Trimming the model\n",
@@ -529,7 +510,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "43f67184",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +577,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d1587a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,9 +588,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
